@@ -6,6 +6,7 @@ version 0.76cvs:
 	* Ability to be invisible on AIM
 	* Chatroom list support (Tim Ringenbach)
 	* Non-ascii character support in AIM chats (Uli Luckas and Marco Ziech)
+	* Vastly improved browser opening, with tab support! (Nathan Fredrickson)
 	* Support for Mozilla Firefox (Chris Friesen and Nathan Fredrickson)
 	* Local IP address information can be changed in Preferences
 	  (Tim Ringenbach)
